# CPlusPlus_Bar

./: CMakeLists.txt  Ital.cpp  Ital.h  Ital.hpp  bevitel_kezel.cpp  bevitel_kezel.h  bevitel_kezel.hpp  faljkezel.cpp  faljkezel.h  fugvenyek.cpp  fugvenyek.hpp  italok_kezel.cpp  koktle.cpp  koktle.h  main.cpp  standard_input.txt  string5.cpp  string5.h  string_kezez.cpp  string_kezez.h  tesztek.cpp  tesztek.h
